fix valign of inputs in header/footer

--- a/skins/standard/global.css
+++ b/skins/standard/global.css
@@ -62,6 +62,7 @@
     {
         font-size: 95%;
         display: inline;
+        vertical-align: baseline;
     }
 
     #lang_links_container {
